Update GitHub username and pronouns in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="prefetch" href="https://github-readme-stats.vercel.app/api?username=wirisu&show_icons=true&theme=dark">
+  <link rel="prefetch" href="https://github-readme-stats.vercel.app/api?username=wirisungs&show_icons=true&theme=dark">
   <script src="https://kit.fontawesome.com/38f0187506.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <link rel="stylesheet" href="./style.css">
@@ -56,7 +56,7 @@
         <p id="bio-status"></p>
       </div>
       <div class="bio-text">
-        <p class="bio-name">wirisu.dev <a class="bio-pronoun">(he/him)</a></p>
+        <p class="bio-name">wirisu.dev <a class="bio-pronoun">(she/her)</a></p>
         <img src="https://wakatime.com/badge/user/b1285e4b-6056-42a0-822f-b549d65ca58f.svg"></img>
         <p class="bio-description">Developer & Full-time Sleeper</p>
         <p id="countdown"></p>
@@ -138,8 +138,8 @@
     <div class="paragraph">
       <h2><i class="fa-solid fa-headphones"></i> Listen to this: Cố Chấp #任性 #Willful 🎤 Ngũ Nguyệt Thiên #五月天 | OST Khó
         Dỗ Dành #难哄</h2>
-      <p align="auto"><iframe width="800" height="500" src="https://www.youtube.com/watch?v=LpZf2PptBX4" title=""
-          frameBorder="0"
+      <p align="auto"><iframe width="800" height="500"
+          src="https://www.youtube.com/embed/LpZf2PptBX4?si=NjH9duNTf7mQqSGI" title="" frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowFullScreen><br></iframe></p>
     </div>
