Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p class="phone-warning">ⓘ Phone viewing is still experimental. Some elements may not render properly.</p>
     <div class="bio">
       <div class="bio-avatar">
-        <img style="border-radius: 10%;" src="https://i.imgur.com/78xPCgc.jpeg" width="200" height="200">
+        <img style="border-radius: 10%;" src="https://imgur.com/2eNlt4R" width="200" height="200">
         <p id="bio-status"></p>
       </div>
       <div class="bio-text">
