Update typed strings in index.html for gaming and personal interests

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       <script>
         var typed = new Typed('#name', {
           strings: ['full-stack developer', 'full-time sleeper', "half-time shitposter", "qualified shitposter",
-            "web developer", "good student", "Genshin Impact player", "qualified shooter in Valorant",
-            "lover of Mihara Momoco"
+            "web developer", "good student", "TFT player", "qualified shooter in CS2",
+            "protector of Xia Yitong"
           ],
           typeSpeed: 96,
           backspeed: 96,
