Update GitHub username in index.html for statistics display

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         rel="noopener"><img src="https://api.statusbadges.me/badge/spotify/727497287777124414?style=for-the-badge"
           alt="spotify"></a>
       <br>
-      <img src="https://github-readme-stats.vercel.app/api?username=wirisu&show_icons=true&theme=dark"></img>
-      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=wirisu&layout=compact&theme=dark"></img>
+      <img src="https://github-readme-stats.vercel.app/api?username=wirisungs&show_icons=true&theme=dark"></img>
+      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=wirisungs&layout=compact&theme=dark"></img>
       <p>Who is me? I'm a <span id="name"></span></p>
       <script>
         var typed = new Typed('#name', {
