Update avatar image source and format WakaTime and GitHub stats images in index.html

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
     <p class="phone-warning">ⓘ Phone viewing is still experimental. Some elements may not render properly.</p>
     <div class="bio">
       <div class="bio-avatar">
-        <img style="border-radius: 10%;" src="https://imgur.com/gallery/xyt-2eNlt4R" width="200" height="200">
+        <img style="border-radius: 10%;" src="/avatar.jpg" width="200" height="200">
         <p id="bio-status"></p>
       </div>
       <div class="bio-text">
         <p class="bio-name">wirisu.dev <a class="bio-pronoun">(she/her)</a></p>
-        <img src="https://wakatime.com/badge/user/93179008-9d1f-48f2-b171-3e130ef71296/project/bdafd901-39cb-4078-b857-db2321b17a47.svg"></img>
+        <img
+          src="https://wakatime.com/badge/user/93179008-9d1f-48f2-b171-3e130ef71296/project/bdafd901-39cb-4078-b857-db2321b17a47.svg"></img>
         <p class="bio-description">Developer & Full-time Sleeper</p>
         <p id="countdown"></p>
         <p class="bio-social">
@@ -87,7 +88,8 @@
           alt="spotify"></a>
       <br>
       <img src="https://github-readme-stats.vercel.app/api?username=wirisungs&show_icons=true&theme=dark"></img>
-      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=wirisungs&layout=compact&theme=dark"></img>
+      <img
+        src="https://github-readme-stats.vercel.app/api/top-langs/?username=wirisungs&layout=compact&theme=dark"></img>
       <p>Who is me? I'm a <span id="name"></span></p>
       <script>
         var typed = new Typed('#name', {
