--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
     </div>
 
     <div class="paragraph">
-      <img src="https://api.statusbadges.me/badge/status/727497287777124414?simple=false&style=for-the-badge"
+      <img src="https://api.statusbadges.me/badge/status/797656363240128522?simple=false&style=for-the-badge"
         alt="status">
-      <img src="https://api.statusbadges.me/badge/playing/727497287777124414?style=for-the-badge" alt="playing">
-      <img src="https://api.statusbadges.me/badge/vscode/727497287777124414?style=for-the-badge" alt="vscode">
-      <a href="https://api.statusbadges.me/openspotify/727497287777124414?style=for-the-badge" target="_blank"
-        rel="noopener"><img src="https://api.statusbadges.me/badge/spotify/727497287777124414?style=for-the-badge"
+      <img src="https://api.statusbadges.me/badge/playing/797656363240128522?style=for-the-badge" alt="playing">
+      <img src="https://api.statusbadges.me/badge/vscode/797656363240128522?style=for-the-badge" alt="vscode">
+      <a href="https://api.statusbadges.me/openspotify/797656363240128522?style=for-the-badge" target="_blank"
+        rel="noopener"><img src="https://api.statusbadges.me/badge/spotify/797656363240128522?style=for-the-badge"
           alt="spotify"></a>
       <br>
       <img src="https://github-readme-stats.vercel.app/api?username=wirisungs&show_icons=true&theme=dark"></img>
@@ -115,15 +115,10 @@
 
     <div class="paragraph">
       <h2>Past & current jobs</h2>
-      <p><b>Owner @ 9C9L.ORG</b> (August 2024 - now): 9C9L.ORG is a Vietnamese anarchy Minecraft server, owned by
-        xKhoacyan.</p>
-      <p><b>Admin @ C3BC Community</b> (October 2024 - now): C3BC is a group of Ben Cat students, love to be a
-        developer. Now I'm a Moderator of this community! Join us through <a href="https://discord.gg/sfeTY3n3Tg">this
-          link!</a></p>
+      <p><b>Owner @ Last Wednesday Society</b> (August 2019 - now): Last Wednesday Society is a Discord server that was originally a community for fans of the anime Little Witch Academia, but later changed to a community for fans of girl-love,co-owned by
+        xKhoacyan & Wirisu.</p>
       <p><b>Giveaway Manager @ HunggVN</b> (October 2024 - now): HunggVN is a famous Minecraft Youtuber in Vietnam, and
         I'm working in his community, as a Giveaway Manager.</p>
-      <p><b>Founder @ Ben Cat English Club</b> (October 2024 - now): This is a club gathered around all students of Ben
-        Cat High School, who got addicted to English. Me and <b>Phuocsium</b> was the founder of this club.</p>
       <p><b>Parner of FizenX Cloud</b> (2024 - future): FizenX Cloud is a service that allow user to purchase a cheap
         but powerful host for their purpose. Make a purchase now at <a href="https://fizenxcloud.vn">fizenxcloud.vn</a>.
       </p>
@@ -132,10 +127,10 @@
     </div>
     <div class="paragraph">
       <h2>Games I'm playing</h2>
-      <p><b>Steam account:</b> MikuStillLove (killme091).</p>
+      <p><b>Steam account:</b> em ơi lâu đài tình ái (flamkagamine).</p>
       <p><b>Genshin Impact:</b> 842885536 <b>(Asia, Lv. 55)</b> & 837774605 <b>(Asia, Lv. 55)</b></p>
-      <p><b>Minecraft:</b> duchakco <b>(Premium account)</b> & DreamsDragon_YTB <b>(non-Premium account)</b>.</p>
-      <p><b>Valorant:</b> KleeSoCute#ak1to (I'm also play some more games, but I won't list it here)</p>
+      <p><b>Minecraft:</b> XYTxWirisu <b>(Premium account)</b> & FlamingFury <b>(non-Premium account)</b>.</p>
+      <p><b>Valorant:</b> Marshmary#Miku (I'm also play some more games, but I won't list it here)</p>
     </div>
     <div class="paragraph">
       <h2><i class="fa-solid fa-headphones"></i> Listen to this: Cố Chấp #任性 #Willful 🎤 Ngũ Nguyệt Thiên #五月天 | OST Khó
