Update personal details and add new project description in index.html

--- a/index.html
+++ b/index.html
@@ -109,19 +109,16 @@
       <h2>About Me</h2>
       <p>Hello world! My name is Wirisu/Willis, a full-stack developer! I'm a 21-year-old student currently dying in
         deadline and stuff...</p>
-      <!-- <p>Now, at the age of 16, I've already become fluent in some well-known programming language like C++, Java, Python,... But I'm not only coding! I'm also a huge fan of game, especially Minecraft. I've already played Minecraft since I was 8, so that I've played Minecraft for about 7yrs! I love tinkering with it, understanding how it works, and creating my own stuff like plugins and mods. Minecraft is like a dream playground for developers like me.</p>
-            <p>So, if you wanna explore it with me, let's journey together into the exciting world of coding and gaming. There's so much to explore, and I'm just getting started!</p> -->
+      <p>At the age of 16, I've already become fluent in some well-known programming language like C++, Java, Python,... But I'm not only coding! I'm also a huge fan of game, especially Minecraft. I've already played Minecraft since I was 8, so that I've played Minecraft for about 7yrs! I love tinkering with it, understanding how it works, and creating my own stuff like plugins and mods. Minecraft is like a dream playground for developers like me.</p>
+      <p>So, if you wanna explore it with me, let's journey together into the exciting world of coding and gaming. There's so much to explore, and I'm just getting started!</p>
     </div>
 
     <div class="paragraph">
       <h2>Past & current jobs</h2>
-      <p><b>Owner @ Last Wednesday Society</b> (August 2019 - now): Last Wednesday Society is a Discord server that was originally a community for fans of the anime Little Witch Academia, but later changed to a community for fans of girl-love,co-owned by
-        xKhoacyan & Wirisu.</p>
+      <p><b>Owner @ Last Wednesday Society</b> (August 2019 - now): Last Wednesday Society is a Discord server that was originally a community for fans of the anime Little Witch Academia, but later changed to a community for fans of girl-love, co-owned by xKhoacyan & Wirisu.</p>
       <p><b>Giveaway Manager @ HunggVN</b> (October 2024 - now): HunggVN is a famous Minecraft Youtuber in Vietnam, and
         I'm working in his community, as a Giveaway Manager.</p>
-      <p><b>Parner of FizenX Cloud</b> (2024 - future): FizenX Cloud is a service that allow user to purchase a cheap
-        but powerful host for their purpose. Make a purchase now at <a href="https://fizenxcloud.vn">fizenxcloud.vn</a>.
-      </p>
+      <p><b>Developer @ Free City</b> (October 2024 - now): Free City is a role-playing GTA5 Server in Vietnam, and I'm working as a Developer.</p>
       <p><b>wirisu's project</b> (forever): This is my own project, aiming to create a lot of useful application for
         life!</p>
     </div>
@@ -151,7 +148,7 @@
     <div class="paragraph">
       <h2>Preferred IDEs</h2>
       <p class="icon-list">
-        <img src="https://skillicons.dev/icons?i=vscode,idea,github,git,androidstudio,sublime,vim"></img>
+        <img src="https://skillicons.dev/icons?i=vscode,idea,github,git,androidstudio,vim"></img>
       </p>
     </div>
 
@@ -178,6 +175,13 @@
           <p class="project-title">TPExpress</p>
           <p>A fast delivery software project developed using React Native and Node.js, deployed on AWS, and integrated
             with a microservices architecture.</p>
+        </div>
+      </div>
+      <div class="project">
+        <img style="border-radius: 10%;" src="https://i.imgur.com/lXEwYmt.jpeg" width="120" height="auto">
+        <div class="project-text">
+          <p class="project-title">CSGO Tournament Analysis</p>
+          <p>CSGO Tournament Analysis is a Python project that uses CSV data to analyze, evaluate, and predict the Major champion of the first-person shooter game CS:GO.</p>
         </div>
       </div>
       <!-- <div class="project">
