--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
     <div class="paragraph">
       <h2>Programming Languages</h2>
       <p class="icon-list">
-        <img src="https://skillicons.dev/icons?i=nextjs,notion,html,css,js,nodejs,astro,ts,md,cpp,python,figma"></img>
+        <img src="https://skillicons.dev/icons?i=nextjs,notion,html,css,js,nodejs,astro,ts,md,cpp,python,figma,flutter"></img>
       </p>
     </div>
 
     <div class="paragraph">
       <h2>Preferred IDEs</h2>
       <p class="icon-list">
-        <img src="https://skillicons.dev/icons?i=vscode,idea,github,git,androidstudio,vim"></img>
+        <img src="https://skillicons.dev/icons?i=vscode,idea,github,git,androidstudio"></img>
       </p>
     </div>
 
@@ -182,6 +182,13 @@
         <div class="project-text">
           <p class="project-title">CSGO Tournament Analysis</p>
           <p>CSGO Tournament Analysis is a Python project that uses CSV data to analyze, evaluate, and predict the Major champion of the first-person shooter game CS:GO.</p>
+        </div>
+      </div>
+      <div class="project">
+        <img style="border-radius: 10%;" src="https://i.imgur.com/lXEwYmt.jpeg" width="120" height="auto">
+        <div class="project-text">
+          <p class="project-title">TPEdical</p>
+          <p>A medical booking app simplifies healthcare access by allowing users to search for doctors, schedule appointments, and manage their medical records seamlessly. It provides features like real-time appointment availability, telemedicine options, reminders, and secure storage of health data, making healthcare more accessible and efficient.</p>
         </div>
       </div>
       <!-- <div class="project">
