--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p class="phone-warning">ⓘ Phone viewing is still experimental. Some elements may not render properly.</p>
     <div class="bio">
       <div class="bio-avatar">
-        <img style="border-radius: 10%;" src="/avatar.jpeg" width="200" height="200">
+        <img style="border-radius: 10%; border-color: white;" src="/avatar.jpeg" width="200" height="200">
         <p id="bio-status"></p>
       </div>
       <div class="bio-text">
