--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <link rel="stylesheet" href="./style.css">
   <script src="https://kit.fontawesome.com/3c327262ed.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico?" type="image/x-icon">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WE6349NQHH"></script>
   <script>
